syntax = "proto3";

package stores;

option go_package = "service/stores/case1/internal/proto";


message MyNestedMessage {
  string name = 1;
  float score = 2;
}

message MyMessage {
  string id = 1;
  int32 value = 2;
  repeated MyNestedMessage nested_messages = 3;
}